# 3DRec

3DRec/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-3DRec-Desktop-Debug/: .ninja_deps  .ninja_log  3DRec  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-3DRec-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-50472990f15ff4184112.json  cmakeFiles-v1-0ac55928ba83d78eb165.json  codemodel-v2-15a19bfac711d1ea467e.json  index-2024-12-08T11-05-42-0689.json  target-3DRec-Debug-998532b1169efd0eecc2.json  target-3DRec_autogen_timestamp_deps-Debug-048a30c12bc9ec9af8ed.json
build-3DRec-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-81eb4fcc88ae6d38bc90.json  cmakeFiles-v1-21441bdadce338842e04.json  codemodel-v2-a2308f4d16b786cc7f48.json  index-2024-12-08T11-05-04-0705.json  target-3DRec-Debug-c8055293512dbf35b62a.json  target-3DRec_autogen-Debug-cb711a6ed07491a42f33.json
build-3DRec-Desktop-Debug/3DRec_autogen/: deps  moc_predefs.h
build-3DRec-Desktop-Debug/3DRec_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-3DRec-Desktop-Debug/3DRec_autogen/include/: ui_mainwindow.h
